tests/compiletests/ui/lang/consts/nested-ref-in-composite.stderr
warning: `#[inline(never)]` function `nested_ref_in_composite::pair_deep_load` has been inlined
  --> $DIR/nested-ref-in-composite.rs:9:4
   |
LL | fn pair_deep_load(r: &'static (&'static u32, &'static f32)) -> (u32, f32) {
   |    ^^^^^^^^^^^^^^
   |
   = note: inlining was required due to illegal parameter type
   = note: called from `nested_ref_in_composite::main_pair`

warning: `#[inline(never)]` function `nested_ref_in_composite::array3_deep_load` has been inlined
  --> $DIR/nested-ref-in-composite.rs:14:4
   |
LL | fn array3_deep_load(r: &'static [&'static u32; 3]) -> [u32; 3] {
   |    ^^^^^^^^^^^^^^^^
   |
   = note: inlining was required due to illegal parameter type
   = note: called from `nested_ref_in_composite::main_array3`

error: error:0:0 - OpConstantComposite Constituent <id> '17[%17]' is not a constant or undef.
         %20 = OpConstantComposite %__u32___f32_ %17 %19
   |
   = note: spirv-val failed
   = note: module `$TEST_BUILD_DIR/lang/consts/nested-ref-in-composite.vulkan1.1`

error: aborting due to 1 previous error; 2 warnings emitted

